2007-11-25  Edward Hervey  <bilboed@bilboed.com>

	* bin/pitivi.in:
	* pitivi/bin.py:
	* pitivi/objectfactory.py:
	* pitivi/settings.py:
	* pitivi/threads.py:
	* pitivi/thumbnailer.py:
	* pitivi/timeline/composition.py:
	* pitivi/timeline/objects.py:
	* pitivi/timeline/source.py:
	* pitivi/timeline/timeline.py:
	* pitivi/ui/mainwindow.py:
	* pitivi/ui/ruler.py:
	* pitivi/ui/slider.py:
	* pitivi/ui/sourcefactories.py:
	* pitivi/ui/timeline.py:
	* pitivi/ui/timelineobjects.py:
	* pitivi/ui/tracklayer.py:
	* pitivi/ui/viewer.py:
	Fix misc issues detected by pychecker.
	Renaming unused method arguments
	Whitespace/tabs fixes.

2007-11-25  Edward Hervey  <bilboed@bilboed.com>

	Patch by: Tommy <yobbobandana at yahoo dot co dot nz>
	* pitivi/ui/timelineobjects.py:
	Fix drag and drop slots in the simple timeline.
	Fixes #498071

2007-11-18  Edward Hervey  <bilboed@bilboed.com>

	* configure.ac:
	Back to development cycle.

=== release 0.11.1 ===

2007-11-18  Edward Hervey  <bilboed@bilboed.com>

	* NEWS:
	* RELEASE:
	* configure.ac:
	Releasing 0.11.1 "A gentlemen game played by hooligans"

2007-11-18  Edward Hervey  <bilboed@bilboed.com>

	* pitivi/pitivi.py:
	Added new 'project-closed' signal to confirm that a project is closed.
	* pitivi/timeline/composition.py:
	Update condensed-list once everything is added to the timeline
	* pitivi/ui/timelineobjects.py:
	Add a bit more logic for when a project is loaded/closed
	* tests/test_file_load_save.py:
	Added tests for new 'project-closed' signal

2007-11-18  Edward Hervey  <bilboed@bilboed.com>

	* pitivi/ui/mainwindow.py:
	Use portable 'if' syntax

2007-11-18  Edward Hervey  <bilboed@bilboed.com>

	* pitivi/ui/sourcefactories.py:
	Fixes to display factories when a new project is loaded.
	Re-factored code a bit to avoid duplicates.

2007-11-18  Edward Hervey  <bilboed@bilboed.com>

	* pitivi/pitivi.py:
	The uri is a keyword argument to Project()
	* pitivi/project.py: